# vits-zero-shot

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: cjke_cleaners2.json  cjke_cleaners2_smoke.json  cjke_cleaners2_smoke_pretrained_g.json  kim_haru_pipeline.json  kim_haru_smoke.json  kim_haru_smoke_pretrained_g.json  kim_haru_smoke_pretrained_g_cleaned.json  korean_cleaners.json  korean_cleaners_smoke.json
scripts/: run_pipeline.py  train_full_vits.py  train_vits.py
voice_trainer/: __init__.py  audio.py  config.py  demo_cli.py  features.py  full_vits_cli.py  generation.py  logging_utils.py  mini_vits.py  pipeline.py  pipeline_cli.py  ranking.py  text.py  text_corpus.py  training.py  vits_cli.py  vits_data.py  vits_dataset.py  vits_train.py
voice_trainer/backends/: __init__.py  base.py  registry.py  vits_backend.py  vits_preparation.py
voice_trainer/datasets/: __init__.py  korean_sentences.json  multilingual_sentences.json  selected_corpus.py
voice_trainer/full_vits/: data_utils.py  mel_processing.py  models.py  runtime.py  train.py  utils.py
voice_trainer/full_vits/monotonic_align/: __init__.py
voice_trainer/full_vits/text/: __init__.py
voice_trainer/vits/: __init__.py  inference.py  mel_processing.py  models.py  preprocess.py  train.py  utils.py
voice_trainer/vits/monotonic_align/: __init__.py
voice_trainer/vits/text/: LICENSE
