[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voice-trainer"
version = "0.1.0"
description = "Single-sample voice cloning, speaker filtering, and local VITS training pipeline."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "cn2an",
  "cython",
  "eng-to-ipa",
  "faster-qwen3-tts",
  "inflect",
  "indic-transliteration",
  "jamo",
  "jieba",
  "ko-pron",
  "librosa",
  "matplotlib",
  "num-thai",
  "numpy",
  "opencc",
  "protobuf",
  "pypinyin",
  "pyopenjtalk",
  "scipy",
  "soundfile",
  "speechbrain",
  "tensorboard",
  "tqdm",
  "torch",
  "torchaudio",
  "unidecode",
  "gradio>=6.9.0",
]

[project.scripts]
voice-trainer-run = "voice_trainer.pipeline_cli:main"
voice-trainer-train-vits = "voice_trainer.vits_cli:main"
demo-vits-run = "voice_trainer.demo_cli:main"

[project.optional-dependencies]
demo = ["gradio"]

[tool.hatch.build.targets.wheel]
packages = ["voice_trainer"]
